tests/simple_tests/syntaxError/returnOutsideFct.py
print(42)

return 42